--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  user-select: none;
 }
 
 .main {
@@ -9,6 +12,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .wrapper {
@@ -18,7 +23,7 @@
   flex-direction: column;
   width: 500px;
   height: 400px;
-  border: 1px solid magenta;
+  border: 2px solid magenta;
   border-radius: 20px;
 }
 
@@ -44,6 +49,7 @@
   width: 45px;
   height: 40px;
   font-size: x-large;
+  font-weight: 600;
   border-radius: 10px;
   border: 1px solid gray;
   text-align: center;
@@ -60,6 +66,10 @@
   background-color: lightgray;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 .keyboard {
@@ -85,5 +95,46 @@
 }
 
 .active {
+  background-color: magenta;
+}
+
+table,
+th,
+td {
+  border: 1px solid magenta;
+  text-align: center;
+}
+
+table {
+  width: 500px;
+  height: 400px;
+  font-weight: 600;
+  border-collapse: separate;
+  border-spacing: 0;
+  border-radius: 20px;
+  overflow: hidden;
+  border-width: 2px;
+}
+
+table:hover {
+  cursor: pointer;
+}
+
+th,
+td {
+  width: 30px;
+  height: 30px;
+}
+
+th {
+  background: lightgray;
+  font-weight: 700;
+}
+
+.highlight {
+  background-color: pink;
+}
+
+.hovered {
   background-color: magenta;
 }
