--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .main {
-  height: 100dvh;
+  height: 90dvh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,7 +16,73 @@
   justify-content: space-evenly;
 }
 
+/* Checkbox */
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px; /* Reduced from 60px to 40px */
+  height: 20px; /* Reduced from 34px to 20px */
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: magenta;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px; /* Reduced from 26px to 16px */
+  width: 16px; /* Reduced from 26px to 16px */
+  left: 2px; /* Adjusted to fit the smaller size */
+  bottom: 2px; /* Adjusted to fit the smaller size */
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: lightgray;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px lightgray;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(20px); /* Adjusted to fit the smaller size */
+  -ms-transform: translateX(20px); /* Adjusted to fit the smaller size */
+  transform: translateX(20px); /* Adjusted to fit the smaller size */
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 20px; /* Adjusted to fit the smaller size */
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 .wrapper {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,6 +91,14 @@
   height: 400px;
   border: 2px solid magenta;
   border-radius: 20px;
+}
+
+.checking {
+  position: absolute;
+  top: 20px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 #feedback {
