--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 40px; /* Reduced from 60px to 40px */
-  height: 20px; /* Reduced from 34px to 20px */
+  width: 40px; 
+  height: 20px; 
 }
 
 /* Hide default HTML checkbox */
@@ -47,10 +47,10 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 16px; /* Reduced from 26px to 16px */
-  width: 16px; /* Reduced from 26px to 16px */
-  left: 2px; /* Adjusted to fit the smaller size */
-  bottom: 2px; /* Adjusted to fit the smaller size */
+  height: 16px; 
+  width: 16px;
+  left: 2px; 
+  bottom: 2px; 
   background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -116,6 +116,17 @@ input:checked + .slider:before {
 #question {
   font-size: 45px;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 
 #input {
   width: 45px;
