--- a/css/style.css
+++ b/css/style.css
@@ -11,76 +11,10 @@
   height: 90dvh;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-}
-
-/* Checkbox */
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 40px; 
-  height: 20px; 
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: magenta;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 16px; 
-  width: 16px;
-  left: 2px; 
-  bottom: 2px; 
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-input:checked + .slider {
-  background-color: lightgray;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px lightgray;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(20px); /* Adjusted to fit the smaller size */
-  -ms-transform: translateX(20px); /* Adjusted to fit the smaller size */
-  transform: translateX(20px); /* Adjusted to fit the smaller size */
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 20px; /* Adjusted to fit the smaller size */
-}
-
-.slider.round:before {
-  border-radius: 50%;
+  justify-content: center;
 }
 
 .wrapper {
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -89,14 +23,26 @@ input:checked + .slider:before {
   height: 400px;
   border: 2px solid magenta;
   border-radius: 20px;
+  margin: 20px;
 }
 
-.checking {
-  position: absolute;
-  top: 20px;
-  align-items: center;
+.counter {
   display: flex;
-  flex-direction: column;
+  gap: 20px;
+  margin-top: -50px;
+  padding-bottom: 20px;
+}
+
+.true {
+  font-size: x-large;
+  font-weight: bold;
+  color: green;
+}
+
+.false {
+  font-size: x-large;
+  font-weight: bold;
+  color: red;
 }
 
 #feedback {
@@ -126,7 +72,6 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
-
 
 #input {
   width: 45px;
@@ -178,46 +123,5 @@ button:hover {
 }
 
 .active {
-  background-color: magenta;
-}
-
-table,
-th,
-td {
-  border: 1px solid magenta;
-  text-align: center;
-}
-
-table {
-  width: 500px;
-  height: 400px;
-  font-weight: 600;
-  border-collapse: separate;
-  border-spacing: 0;
-  border-radius: 20px;
-  overflow: hidden;
-  border-width: 2px;
-}
-
-table:hover {
-  cursor: pointer;
-}
-
-th,
-td {
-  width: 30px;
-  height: 30px;
-}
-
-th {
-  background: lightgray;
-  font-weight: 700;
-}
-
-.highlight {
-  background-color: pink;
-}
-
-.hovered {
   background-color: magenta;
 }
