add keyboard(keys) functionality

--- a/css/style.css
+++ b/css/style.css
@@ -114,12 +114,9 @@ button:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.keys {
+.keys,
+.key {
   background-color: pink;
-}
-
-#all {
-  background-color: magenta;
 }
 
 .active {
