--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ a {
   text-decoration: none;
 }
 
+body {
+  background: #fff;
+}
+
 @font-face {
   font-family: interMedium;
   src: url(../fonts/interMedium.ttf);
@@ -148,23 +152,53 @@ main {
   gap: 4px;
 }
 
-.true {
+@keyframes scaleUp {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes moveDown {
+  0% {
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.true,
+.false {
+  display: inline-block;
   font-size: x-large;
   font-weight: bold;
+  transition: transform 0.3s ease;
+}
+
+.true {
   color: green;
 }
 
 .false {
-  font-size: x-large;
-  font-weight: bold;
   color: red;
 }
 
-#feedback {
-  margin-bottom: 10px;
-  border: 1px solid transparent;
-  border-radius: 10px;
-  text-align: center;
+#right.animated,
+#wrong.animated {
+  animation: scaleUp 0.3s ease;
+}
+
+.true.animated,
+.false.animated {
+  animation: moveDown 0.3s ease;
 }
 
 .expression {
@@ -201,6 +235,34 @@ input[type="number"] {
 
 #input:focus {
   outline-color: magenta;
+}
+
+.shaking {
+  animation: shake 0.5s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
 
 #checkBtn {
@@ -243,4 +305,11 @@ button:hover {
 
 .active {
   background-color: magenta;
+}
+
+@media (max-width: 775px) {
+  .wrapper {
+    height: 320px;
+    width: 300px;
+  }
 }
